// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders appropriately (bulk) 1`] = `
<div
  className="plan plan-vertical current new"
>
  <div
    className="plan-marker__wrapper"
  >
    <span
      className="plan-marker plan-marker--current"
    >
      Current Plan
    </span>
  </div>
  <div
    className="plan-marker__wrapper"
  >
    <span
      className="plan-marker plan-marker--new"
    >
      New Plan
    </span>
  </div>
  <div
    className="plan-divider"
  >
    <h5
      className="plan-title"
    >
      Bulk
    </h5>
    <div
      className="plan-allowance"
    >
      Unlimited
    </div>
  </div>
  <div
    className="plan-price"
  >
    $
    0
     
    <small>
      month
    </small>
  </div>
</div>
`;

exports[`renders appropriately (current plan) 1`] = `
<div
  className="plan plan-vertical current new"
>
  <div
    className="plan-marker__wrapper"
  >
    <span
      className="plan-marker plan-marker--current"
    >
      Current Plan
    </span>
  </div>
  <div
    className="plan-marker__wrapper"
  >
    <span
      className="plan-marker plan-marker--new"
    >
      New Plan
    </span>
  </div>
  <div
    className="plan-divider"
  >
    <h5
      className="plan-title"
    >
      Chihuahua
    </h5>
    <div
      className="plan-allowance"
    >
      Up to 
      <strong>
        4
      </strong>
       Reviews
    </div>
  </div>
  <div
    className="plan-price"
  >
    $
    49
     
    <small>
      month
    </small>
  </div>
</div>
`;

exports[`renders appropriately (neither current nor new plan) 1`] = `
<div
  className="plan plan-vertical"
>
  <div
    className="plan-divider"
  >
    <h5
      className="plan-title"
    >
      Chihuahua
    </h5>
    <div
      className="plan-allowance"
    >
      Up to 
      <strong>
        4
      </strong>
       Reviews
    </div>
  </div>
  <div
    className="plan-price"
  >
    $
    49
     
    <small>
      month
    </small>
  </div>
</div>
`;

exports[`renders appropriately (new plan) 1`] = `
<div
  className="plan plan-vertical new"
>
  <div
    className="plan-marker__wrapper"
  >
    <span
      className="plan-marker plan-marker--new"
    >
      New Plan
    </span>
  </div>
  <div
    className="plan-divider"
  >
    <h5
      className="plan-title"
    >
      Chihuahua
    </h5>
    <div
      className="plan-allowance"
    >
      Up to 
      <strong>
        4
      </strong>
       Reviews
    </div>
  </div>
  <div
    className="plan-price"
  >
    $
    49
     
    <small>
      month
    </small>
  </div>
</div>
`;
